Fixed icons shifting

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -77,3 +77,9 @@ section {
     box-shadow: 0 0 20px hsl(var(--active) / 0.8);
   }
 }
+
+.icon {
+    width: 16px;
+    aspect-ratio: 1;
+    line-height: 1;
+}
